updated binary classification function

--- a/classification_analysis.ipynb
+++ b/classification_analysis.ipynb
@@ -369,10 +369,11 @@
     "                 \"ESCOOTER\": \"CYCLING\", \n",
     "                 \"AUTOMOTIVE\" : \"AUTOMOTIVE\",\n",
     "                 \"BUS\": \"AUTOMOTIVE\",\n",
-    "                 \"TRAIN\": \"AUTOMOTIVE\",\n",
-    "                 \"LIGHT_RAIL\": \"AUTOMOTIVE\",\n",
-    "                 \"SUBWAY\": \"AUTOMOTIVE\",\n",
+    "                 \"TRAIN\": \"TRAIN\",\n",
+    "                 \"LIGHT_RAIL\": \"TRAIN\",\n",
+    "                 \"SUBWAY\": \"TRAIN\",\n",
     "                 \"CAR\": \"AUTOMOTIVE\",\n",
+    "                 \"AIR_OR_HSR\": \"TRAIN\",\n",
     "                 \"INVALID\" : \"INVALID\"}\n",
     "    if pv:\n",
     "        assert pv_l is None, \"CANNOT PROVIDE BOTH PHONE VIEW AND PHONE VIEW LIST\"\n",
@@ -385,15 +386,14 @@
     "        assert 1, \"MUST PASS EITHER PHONE VIEW OR PHONE VIEW LIST\"\n",
     "    TP, FN, FP, TN = {}, {}, {}, {}\n",
     "    for trip in trips:\n",
-    "#         for mode in pd.DataFrame(trip['ss_timeline'])['mode'].unique():\n",
-    "        for mode in [\"WALKING\", \"AUTOMOTIVE\", \"CYCLING\", \"INVALID\"]:\n",
+    "        for mode in set(BASE_MODE.values()):\n",
     "            for ss in trip['ss_timeline']:\n",
     "                try:\n",
     "                    # taken from emission.core.wrapper.modeprediction\n",
     "                    ss = ss['data']\n",
     "                    ss['mode'] = PredictedModeTypes(ss['sensed_mode'])._name_\n",
     "                except:\n",
-    "                    1/0\n",
+    "                    pass\n",
     "                ss_dur = ss['end_ts'] - ss['start_ts']\n",
     "                gts_dur = 0\n",
     "                for gts in trip['gts_timeline']:\n",
@@ -407,7 +407,7 @@
     "                        elif BASE_MODE[mode] != BASE_MODE[ss['mode']] and BASE_MODE[mode] == BASE_MODE[gts['mode']]:\n",
     "                            FN[mode] = FN.setdefault(mode, 0) + dur\n",
     "                        else:\n",
-    "                            TN[mode] = TN.setdefault(ss['mode'], 0) + dur\n",
+    "                            TN[mode] = TN.setdefault(mode, 0) + dur\n",
     "                leftover = ss_dur - gts_dur\n",
     "                assert leftover >= 0, f\"ERROR, NEGATIVE LEFTOVER OF {leftover}, NEED TO INVESTIGATE\"\n",
     "                if leftover > 0:\n",
@@ -420,11 +420,66 @@
     "                    # We have no_gts, but our modes are unequal, so a true negative\n",
     "                    else:\n",
     "                        TN[mode] = TN.setdefault(mode, 0) + leftover\n",
-    "    # combine walking and running\n",
-    "    for BC in [TP, FP, FN, TN]:\n",
-    "        BC['WALKING'] = BC.setdefault('WALKING', 0) + BC.setdefault('RUNNING', 0)\n",
-    "        BC = BC.pop('RUNNING')\n",
     "    return TP, FP, FN, TN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b733db81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "av_ucb =  eapv.create_analysed_view(pv_ucb, 'http://localhost:8080', \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56841e8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(get_binary_class_in_sec('ios', 'HAHFDC', pv=pv_la))\n",
+    "dic={}\n",
+    "d = df.reset_index(drop=True)\n",
+    "dic['ios'+'\\\\_'+'HAHFDC'] = d\n",
+    "d = pd.concat(dic, axis=1)\n",
+    "d['Classifier'] = ['TP', 'FP', 'FN', 'TN']\n",
+    "print(d.set_index('Classifier').rename_axis(['Title', 'Mode'], axis=1).style.to_latex())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8c1948f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(get_binary_class_in_sec('ios', 'HAMFDC', pv=pv_la))\n",
+    "dic={}\n",
+    "d = df.reset_index(drop=True)\n",
+    "dic['ios'+'\\\\_'+'HAMFDC'] = d\n",
+    "d = pd.concat(dic, axis=1)\n",
+    "d['Classifier'] = ['TP', 'FP', 'FN', 'TN']\n",
+    "print(d.set_index('Classifier').rename_axis(['Title', 'Mode'], axis=1).style.to_latex())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5e76cb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(get_binary_class_in_sec('android', 'MAHFDC', pv=pv_la))\n",
+    "dic={}\n",
+    "d = df.reset_index(drop=True)\n",
+    "dic['ios'+'\\\\_'+'MAHFDC'] = d\n",
+    "d = pd.concat(dic, axis=1)\n",
+    "d['Classifier'] = ['TP', 'FP', 'FN', 'TN']\n",
+    "print(d.set_index('Classifier').rename_axis(['Title', 'Mode'], axis=1).style.to_latex())"
    ]
   },
   {
@@ -442,22 +497,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_FN_and_FP_rate(spec_detail):\n",
-    "    phone_view = eipv.PhoneView(spec_detail)\n",
-    "    analysed_view = eapv.create_analysed_view(phone_view, spec_detail.DATASTORE_LOC, \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")\n",
-    "    (TP, FP, FN, TN) = get_binary_class_in_sec('ios', 'HAHFDC', pv=analysed_view)\n",
-    "    \n",
+    "def get_FN_and_FP_rate(spec_details):\n",
+    "    if type(spec_details) is not list: spec_details = [ spec_details ]\n",
+    "    av_l = []\n",
+    "#     for spec_detail in spec_details:\n",
+    "#         phone_view = eipv.PhoneView(spec_detail)\n",
+    "#         analysed_view = eapv.create_analysed_view(phone_view, spec_detail.DATASTORE_LOC, \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")\n",
+    "#         av_l.append(analysed_view)\n",
+    "    for pv in [pv_la, pv_sj, pv_ucb]:\n",
+    "        analysed_view = eapv.create_analysed_view(pv, spec_details[0].DATASTORE_LOC, \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")\n",
+    "        av_l.append(analysed_view)\n",
     "    FN_rate = {'ios_HAHFDC' : {}, 'android_HAHFDC' : {}}\n",
     "    FP_rate = {'ios_HAHFDC' : {}, 'android_HAHFDC' : {}}\n",
-    "    assert len(FN.keys()) == len(FP.keys()), \"WE SHOULD HAVE THE SAME FN AND FP KEYS\"\n",
-    "    for mode in FN.keys():\n",
-    "        FN_rate['ios_HAHFDC'][mode] = FN[mode] / (TP[mode] + FP[mode] + FN[mode] + TN[mode])\n",
-    "        FP_rate['ios_HAHFDC'][mode] = FN[mode] / (TP[mode] + FP[mode] + FN[mode] + TN[mode])\n",
-    "    (TP, FP, FN, TN) = get_binary_class_in_sec('android', 'HAHFDC', pv=analysed_view)\n",
-    "    assert len(FN.keys()) == len(FP.keys()), \"WE SHOULD HAVE THE SAME FN AND FP KEYS\"\n",
-    "    for mode in FN.keys():\n",
-    "        FN_rate['android_HAHFDC'][mode] = FN[mode] / (TP[mode] + FP[mode] + FN[mode] + TN[mode])\n",
-    "        FP_rate['android_HAHFDC'][mode] = FN[mode] / (TP[mode] + FP[mode] + FN[mode] + TN[mode])\n",
+    "    for analysed_view in av_l:\n",
+    "        (TP, FP, FN, TN) = get_binary_class_in_sec('ios', 'HAHFDC', pv=analysed_view)\n",
+    "        assert len(FN.keys()) == len(FP.keys()), f\"FP: {FP.keys()}, \\t FN: {FN.keys()}\"\n",
+    "        for mode in FN.keys():\n",
+    "            FN_rate['ios_HAHFDC'][mode] = FN[mode] / (TP[mode] + FP[mode] + FN[mode] + TN[mode])\n",
+    "            FP_rate['ios_HAHFDC'][mode] = FN[mode] / (TP[mode] + FP[mode] + FN[mode] + TN[mode])\n",
+    "        (TP, FP, FN, TN) = get_binary_class_in_sec('android', 'HAHFDC', pv=analysed_view)\n",
+    "        assert len(FN.keys()) == len(FP.keys()), f\"FP: {FP.keys()}, \\t FN: {FN.keys()}\"\n",
+    "        for mode in FN.keys():\n",
+    "            FN_rate['android_HAHFDC'][mode] = FN[mode] / (TP[mode] + FP[mode] + FN[mode] + TN[mode])\n",
+    "            FP_rate['android_HAHFDC'][mode] = FN[mode] / (TP[mode] + FP[mode] + FN[mode] + TN[mode])\n",
     "    return FN_rate, FP_rate"
    ]
   },
@@ -469,7 +531,18 @@
    "outputs": [],
    "source": [
     "sd = eisd.ServerSpecDetails('http://localhost:8080', \"shankari@eecs.berkeley.edu\", \"unimodal_trip_car_bike_mtv_la\")\n",
-    "get_FN_and_FP_rate(sd)"
+    "err = get_FN_and_FP_rate(sd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c433b622",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "print(json.dumps(err))"
    ]
   },
   {
@@ -681,6 +754,17 @@
     "            d = pd.concat(dic, axis=1)\n",
     "    d['Metrics'] = ['Accuracy', f\"$F_{beta}$ score\", f\"MCC score\", f\"Information score\"]\n",
     "    return d.set_index('Metrics').rename_axis(['Role', 'Mode'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "415479d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = display_metrics('ios', 'HAHFDC', pv_la)\n",
+    "df"
    ]
   },
   {
