--- a/classification_analysis.ipynb
+++ b/classification_analysis.ipynb
@@ -271,8 +271,6 @@
     "#                             print(\"Skipping WAITING section %s %s with potential partway transitions\" %\n",
     "#                                   (tr[\"trip_id\"], section[\"trip_id\"]))\n",
     "                            continue\n",
-    "                        # this calulcates the metric for the mode\n",
-    "\n",
     "                        ## and now we have the gt mode!\n",
     "                        gts = {'start_ts': section['start_ts'], \n",
     "                               'end_ts': section['end_ts'], \n",
@@ -369,11 +367,11 @@
     "                 \"ESCOOTER\": \"CYCLING\", \n",
     "                 \"AUTOMOTIVE\" : \"AUTOMOTIVE\",\n",
     "                 \"BUS\": \"AUTOMOTIVE\",\n",
-    "                 \"TRAIN\": \"TRAIN\",\n",
-    "                 \"LIGHT_RAIL\": \"TRAIN\",\n",
-    "                 \"SUBWAY\": \"TRAIN\",\n",
+    "                 \"TRAIN\": \"AUTOMOTIVE\",\n",
+    "                 \"LIGHT_RAIL\": \"AUTOMOTIVE\",\n",
+    "                 \"SUBWAY\": \"AUTOMOTIVE\",\n",
     "                 \"CAR\": \"AUTOMOTIVE\",\n",
-    "                 \"AIR_OR_HSR\": \"TRAIN\",\n",
+    "                 \"AIR_OR_HSR\": \"AUTOMOTIVE\",\n",
     "                 \"INVALID\" : \"INVALID\"}\n",
     "    if pv:\n",
     "        assert pv_l is None, \"CANNOT PROVIDE BOTH PHONE VIEW AND PHONE VIEW LIST\"\n",
@@ -388,12 +386,12 @@
     "    for trip in trips:\n",
     "        for mode in set(BASE_MODE.values()):\n",
     "            for ss in trip['ss_timeline']:\n",
-    "                try:\n",
+    "                print(ss.keys())\n",
+    "                if 'data' in ss.keys():\n",
     "                    # taken from emission.core.wrapper.modeprediction\n",
     "                    ss = ss['data']\n",
     "                    ss['mode'] = PredictedModeTypes(ss['sensed_mode'])._name_\n",
-    "                except:\n",
-    "                    pass\n",
+    "                    print(ss['mode'])\n",
     "                ss_dur = ss['end_ts'] - ss['start_ts']\n",
     "                gts_dur = 0\n",
     "                for gts in trip['gts_timeline']:\n",
@@ -426,57 +424,120 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b733db81",
+   "id": "ea7b0560",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_binary_class_in_sec('ios', 'HAHFDC', pv=cv_la)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "214eb548",
+   "metadata": {},
+   "source": [
+    "## Get tables for raw output\n",
+    "BASE MODES = `['WALKING', 'CYCLING', 'AUTOMOTIVE', 'INVALID']`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "190607f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_tables_raw_data(os):\n",
+    "    df = pd.DataFrame(get_binary_class_in_sec(os, 'HAHFDC', pv_l=[pv_la, pv_ucb, pv_sj]))\n",
+    "    df=df.reindex(columns=['WALKING', 'CYCLING', 'AUTOMOTIVE', 'INVALID'])\n",
+    "    dic={}\n",
+    "    d = df.reset_index(drop=True)\n",
+    "    dic['ios'+'\\\\_'+'HAHFDC'] = d\n",
+    "    d = pd.concat(dic, axis=1)\n",
+    "    d['Classifier'] = ['TP', 'FP', 'FN', 'TN']\n",
+    "    print(d.set_index('Classifier').rename_axis(['Title', 'Mode'], axis=1).style.to_latex())\n",
+    "    df = pd.DataFrame(get_binary_class_in_sec(os, 'HAMFDC', pv_l=[pv_la, pv_ucb, pv_sj]))\n",
+    "    df=df.reindex(columns=['WALKING', 'CYCLING', 'AUTOMOTIVE', 'INVALID'])\n",
+    "    dic={}\n",
+    "    d = df.reset_index(drop=True)\n",
+    "    dic['ios'+'\\\\_'+'HAHFDC'] = d\n",
+    "    d = pd.concat(dic, axis=1)\n",
+    "    d['Classifier'] = ['TP', 'FP', 'FN', 'TN']\n",
+    "    print(d.set_index('Classifier').rename_axis(['Title', 'Mode'], axis=1).style.to_latex())\n",
+    "    df = pd.DataFrame(get_binary_class_in_sec(os, 'MAHFDC', pv_l=[pv_la, pv_ucb, pv_sj]))\n",
+    "    df=df.reindex(columns=['WALKING', 'CYCLING', 'AUTOMOTIVE', 'INVALID'])\n",
+    "    dic={}\n",
+    "    d = df.reset_index(drop=True)\n",
+    "    dic['ios'+'\\\\_'+'HAHFDC'] = d\n",
+    "    d = pd.concat(dic, axis=1)\n",
+    "    d['Classifier'] = ['TP', 'FP', 'FN', 'TN']\n",
+    "    print(d.set_index('Classifier').rename_axis(['Title', 'Mode'], axis=1).style.to_latex())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bad38e6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_tables_raw_data('ios')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28d06357",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_tables_raw_data('android')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f1c3616",
+   "metadata": {},
+   "source": [
+    "## Get tables cleaned\n",
+    "BASE MODES = ``"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1130552d",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%capture\n",
-    "av_ucb =  eapv.create_analysed_view(pv_ucb, 'http://localhost:8080', \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")"
+    "cv_la   = eapv.create_analysed_view(pv_la, \"http://localhost:8080\", \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/cleaned_section\")\n",
+    "cl_sj   = eapv.create_analysed_view(pv_sj, \"http://localhost:8080\", \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/cleaned_section\")\n",
+    "cv_ucb  = eapv.create_analysed_view(pv_ucb, \"http://localhost:8080\", \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/cleaned_section\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56841e8d",
+   "id": "76827b48",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.DataFrame(get_binary_class_in_sec('ios', 'HAHFDC', pv=pv_la))\n",
+    "get_binary_class_in_sec('ios', 'HAHFDC', pv=cv_la)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d416181c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(get_binary_class_in_sec('ios', 'HAHFDC', pv_l=[cv_la, cl_sj, cv_ucb]))\n",
+    "df=df.reindex(columns=['WALKING', 'CYCLING', 'AUTOMOTIVE', 'INVALID'])\n",
     "dic={}\n",
     "d = df.reset_index(drop=True)\n",
     "dic['ios'+'\\\\_'+'HAHFDC'] = d\n",
-    "d = pd.concat(dic, axis=1)\n",
-    "d['Classifier'] = ['TP', 'FP', 'FN', 'TN']\n",
-    "print(d.set_index('Classifier').rename_axis(['Title', 'Mode'], axis=1).style.to_latex())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b8c1948f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.DataFrame(get_binary_class_in_sec('ios', 'HAMFDC', pv=pv_la))\n",
-    "dic={}\n",
-    "d = df.reset_index(drop=True)\n",
-    "dic['ios'+'\\\\_'+'HAMFDC'] = d\n",
-    "d = pd.concat(dic, axis=1)\n",
-    "d['Classifier'] = ['TP', 'FP', 'FN', 'TN']\n",
-    "print(d.set_index('Classifier').rename_axis(['Title', 'Mode'], axis=1).style.to_latex())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c5e76cb0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.DataFrame(get_binary_class_in_sec('android', 'MAHFDC', pv=pv_la))\n",
-    "dic={}\n",
-    "d = df.reset_index(drop=True)\n",
-    "dic['ios'+'\\\\_'+'MAHFDC'] = d\n",
     "d = pd.concat(dic, axis=1)\n",
     "d['Classifier'] = ['TP', 'FP', 'FN', 'TN']\n",
     "print(d.set_index('Classifier').rename_axis(['Title', 'Mode'], axis=1).style.to_latex())"
@@ -1013,7 +1074,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
