updating output, binary class seems wrong

--- a/classification_analysis.ipynb
+++ b/classification_analysis.ipynb
@@ -235,6 +235,7 @@
     "                                                                                  section['trip_id_base'],\n",
     "                                                                                  tr['start_ts'],\n",
     "                                                                                  tr['end_ts'])\n",
+    "                        \n",
     "                        if section_gt_leg[\"type\"] == \"WAITING\":\n",
     "#                             print(\"Skipping WAITING section %s %s with potential partway transitions\" %\n",
     "#                                   (tr[\"trip_id\"], section[\"trip_id\"]))\n",
@@ -244,11 +245,11 @@
     "                               'end_ts': section['end_ts'], \n",
     "                               'mode': section_gt_leg['mode']}\n",
     "                        tr_gts.append(gts)\n",
-    "                # now, we build a timeline for each trip\n",
-    "                trip = tr.copy()\n",
-    "                trip['ss_timeline']  = tr_ss\n",
-    "                trip['gts_timeline'] = tr_gts\n",
-    "                trips.append(trip)\n",
+    "                    # now, we build a timeline for each trip\n",
+    "                    trip = tr.copy()\n",
+    "                    trip['ss_timeline']  = tr_ss\n",
+    "                    trip['gts_timeline'] = tr_gts\n",
+    "                    trips.append(trip)\n",
     "    return trips"
    ]
   },
@@ -294,11 +295,11 @@
     "                 \"ESCOOTER\": \"CYCLING\", \n",
     "                 \"AUTOMOTIVE\" : \"AUTOMOTIVE\",\n",
     "                 \"BUS\": \"AUTOMOTIVE\",\n",
-    "                 \"TRAIN\": \"AUTOMOTIVE\",\n",
-    "                 \"LIGHT_RAIL\": \"AUTOMOTIVE\",\n",
-    "                 \"SUBWAY\": \"AUTOMOTIVE\",\n",
+    "                 \"TRAIN\": \"TRAIN\",\n",
+    "                 \"LIGHT_RAIL\": \"TRAIN\",\n",
+    "                 \"SUBWAY\": \"TRAIN\",\n",
     "                 \"CAR\": \"AUTOMOTIVE\",\n",
-    "                 \"AIR_OR_HSR\": \"AUTOMOTIVE\",\n",
+    "                 \"AIR_OR_HSR\": \"TRAIN\",\n",
     "                 \"INVALID\" : \"INVALID\"}\n",
     "    if pv:\n",
     "        assert pv_l is None, \"CANNOT PROVIDE BOTH PHONE VIEW AND PHONE VIEW LIST\"\n",
@@ -309,7 +310,7 @@
     "            trips.extend(get_trip_ss_and_gts_timeline(pv, os, role))\n",
     "    else:\n",
     "        assert 1, \"MUST PASS EITHER PHONE VIEW OR PHONE VIEW LIST\"\n",
-    "    TP, FN, FP, TN = {}, {}, {}, {}\n",
+    "    TP, FN, FP, TN = {'CYCLING' : 0}, {'INVALID' : 0}, {'CYCLING' : 0,'INVALID' : 0}, {}\n",
     "    for trip in trips:\n",
     "        for mode in set(BASE_MODE.values()):\n",
     "            for ss in trip['ss_timeline']:\n",
@@ -318,6 +319,8 @@
     "                    # taken from emission.core.wrapper.modeprediction\n",
     "                    ss = ss['data']\n",
     "                    ss['mode'] = PredictedModeTypes(ss['sensed_mode'])._name_\n",
+    "                    TP['TRAIN'] = 0\n",
+    "                    FP['TRAIN'] = 0\n",
     "#                     print(ss['mode'])\n",
     "                ss_dur = ss['end_ts'] - ss['start_ts']\n",
     "                gts_dur = 0\n",
@@ -353,7 +356,7 @@
    "id": "214eb548",
    "metadata": {},
    "source": [
-    "## Get tables for raw output\n",
+    "#### raw output binary tables\n",
     "BASE MODES = `['WALKING', 'CYCLING', 'AUTOMOTIVE', 'INVALID']`"
    ]
   },
@@ -364,7 +367,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_tables_raw_data(os):\n",
+    "def get_binary_raw_data(os):\n",
     "    df = pd.DataFrame(get_binary_class_in_sec(os, 'HAHFDC', pv_l=[pv_la, pv_ucb, pv_sj]))\n",
     "    df=df.reindex(columns=['WALKING', 'CYCLING', 'AUTOMOTIVE', 'INVALID'])\n",
     "    dic={}\n",
@@ -372,7 +375,7 @@
     "    dic['ios'+'\\\\_'+'HAHFDC'] = d\n",
     "    d = pd.concat(dic, axis=1)\n",
     "    d['Classifier'] = ['TP', 'FP', 'FN', 'TN']\n",
-    "    print(d.set_index('Classifier').rename_axis(['Title', 'Mode'], axis=1).style.to_latex())\n",
+    "    print(d.set_index('Classifier').rename_axis(['Title', 'Mode'], axis=1).astype(int).style.to_latex())\n",
     "    df = pd.DataFrame(get_binary_class_in_sec(os, 'HAMFDC', pv_l=[pv_la, pv_ucb, pv_sj]))\n",
     "    df=df.reindex(columns=['WALKING', 'CYCLING', 'AUTOMOTIVE', 'INVALID'])\n",
     "    dic={}\n",
@@ -380,7 +383,7 @@
     "    dic['ios'+'\\\\_'+'HAHFDC'] = d\n",
     "    d = pd.concat(dic, axis=1)\n",
     "    d['Classifier'] = ['TP', 'FP', 'FN', 'TN']\n",
-    "    print(d.set_index('Classifier').rename_axis(['Title', 'Mode'], axis=1).style.to_latex())\n",
+    "    print(d.set_index('Classifier').rename_axis(['Title', 'Mode'], axis=1).astype(int).style.to_latex())\n",
     "    df = pd.DataFrame(get_binary_class_in_sec(os, 'MAHFDC', pv_l=[pv_la, pv_ucb, pv_sj]))\n",
     "    df=df.reindex(columns=['WALKING', 'CYCLING', 'AUTOMOTIVE', 'INVALID'])\n",
     "    dic={}\n",
@@ -388,7 +391,35 @@
     "    dic['ios'+'\\\\_'+'HAHFDC'] = d\n",
     "    d = pd.concat(dic, axis=1)\n",
     "    d['Classifier'] = ['TP', 'FP', 'FN', 'TN']\n",
-    "    print(d.set_index('Classifier').rename_axis(['Title', 'Mode'], axis=1).style.to_latex())"
+    "    print(d.set_index('Classifier').rename_axis(['Title', 'Mode'], axis=1).astype(int).style.to_latex())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb8c868c",
+   "metadata": {},
+   "source": [
+    "#### random forrest binary tables\n",
+    "BASE MODES = `['WALKING', 'CYCLING', 'AUTOMOTIVE', 'INVALID']`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be54037d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_rf_binary(os):\n",
+    "    for role in ['HAHFDC', 'HAMFDC', 'MAHFDC']:\n",
+    "        df = pd.DataFrame(get_binary_class_in_sec(os, role, pv_l=[rfv_la, rfv_ucb, rfv_sj]))\n",
+    "        df=df.reindex(columns=['WALKING', 'CYCLING', 'AUTOMOTIVE', 'TRAIN', 'INVALID'])\n",
+    "        dic={}\n",
+    "        d = df.reset_index(drop=True)\n",
+    "        dic[os+'\\\\_'+role] = d\n",
+    "        d = pd.concat(dic, axis=1)\n",
+    "        d['Classifier'] = ['TP', 'FP', 'FN', 'TN']\n",
+    "        print(d.set_index('Classifier').rename_axis(['Title', 'Mode'], axis=1).astype(int).style.to_latex())"
    ]
   },
   {
@@ -475,6 +506,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1dc6ef95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def display_f_score(os):\n",
+    "    return ([ (k, round(get_F_score(os, 'HAHFDC', beta=1, pv=None, pv_l=[pv_la, pv_sj, pv_ucb])[k], 4)) for k in get_F_score(os, 'HAHFDC', beta=1, pv=None, pv_l=[pv_la, pv_sj, pv_ucb])],\n",
+    "            [ (k, round(get_F_score(os, 'HAMFDC', beta=1, pv=None, pv_l=[pv_la, pv_sj, pv_ucb])[k], 4)) for k in get_F_score(os, 'HAHFDC', beta=1, pv=None, pv_l=[pv_la, pv_sj, pv_ucb])],\n",
+    "            [ (k, round(get_F_score(os, 'MAHFDC', beta=1, pv=None, pv_l=[pv_la, pv_sj, pv_ucb])[k], 4)) for k in get_F_score(os, 'HAHFDC', beta=1, pv=None, pv_l=[pv_la, pv_sj, pv_ucb])]\n",
+    "           )"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "68f62c54",
    "metadata": {},
@@ -499,14 +544,15 @@
     "    trips = []\n",
     "    for pv in pv_l :\n",
     "        trips.extend(get_trip_ss_and_gts_timeline(pv, os, role))\n",
-    "#     trips = get_trip_ss_and_gts_timeline(pv, os, role)\n",
     "    for trip in trips:\n",
     "        for ss in trip['ss_timeline']:\n",
+    "            if 'data' in ss.keys():\n",
+    "                # taken from emission.core.wrapper.modeprediction\n",
+    "                ss = ss['data']\n",
     "            \n",
     "            ss_dur = ss['end_ts'] - ss['start_ts']\n",
     "            gts_dur = 0\n",
     "            cm = {}\n",
-    "            \n",
     "            for gts in trip['gts_timeline']:\n",
     "                if ss['end_ts'] >= gts['start_ts'] and ss['start_ts'] <= gts['end_ts']:\n",
     "                    dur = min(ss['end_ts'], gts['end_ts']) - max(ss['start_ts'], gts['start_ts'])\n",
@@ -531,24 +577,54 @@
     "def get_raw_cm(os):\n",
     "    if os == 'ios':\n",
     "        df = pd.DataFrame(get_confusion_matrix([pv_la, pv_sj, pv_ucb], os, 'HAHFDC')).groupby('sensed_mode').sum().astype(int)\n",
-    "        print(df.reindex(columns=['WALKING', 'BICYCLING', 'ESCOOTER', 'BUS', 'LIGHT_RAIL', 'TRAIN', 'NO_GT'],\n",
+    "        print(df.reindex(columns=['WALKING', 'BICYCLING', 'ESCOOTER', 'CAR', 'BUS', 'LIGHT_RAIL', 'TRAIN', 'NO_GT'],\n",
     "                   index=['WALKING', 'RUNNING', 'CYCLING', 'AUTOMOTIVE']).style.to_latex())\n",
     "        df = pd.DataFrame(get_confusion_matrix([pv_la, pv_sj, pv_ucb], os, 'HAMFDC')).groupby('sensed_mode').sum().astype(int)\n",
-    "        print(df.reindex(columns=['WALKING', 'BICYCLING', 'ESCOOTER', 'BUS', 'LIGHT_RAIL', 'TRAIN', 'NO_GT'],\n",
+    "        print(df.reindex(columns=['WALKING', 'BICYCLING', 'ESCOOTER','CAR', 'BUS', 'LIGHT_RAIL', 'TRAIN', 'NO_GT'],\n",
     "                   index=['WALKING', 'RUNNING', 'CYCLING', 'AUTOMOTIVE']).style.to_latex())\n",
     "        df = pd.DataFrame(get_confusion_matrix([pv_la, pv_sj, pv_ucb], os, 'MAHFDC')).groupby('sensed_mode').sum().astype(int)\n",
-    "        print(df.reindex(columns=['WALKING', 'BICYCLING', 'ESCOOTER', 'BUS', 'LIGHT_RAIL', 'TRAIN', 'NO_GT'],\n",
-    "                   index=['WALKING', 'RUNNING', 'CYCLING', 'AUTOMOTIVE']).style.to_latex())\n",
+    "        print(df.reindex(columns=['WALKING', 'BICYCLING', 'ESCOOTER','CAR', 'BUS', 'LIGHT_RAIL', 'TRAIN', 'NO_GT'],\n",
+    "                   index=['WALKING', 'RUNNING', 'AUTOMOTIVE']).style.to_latex())\n",
     "    if os == 'android':\n",
     "        df = pd.DataFrame(get_confusion_matrix([pv_la, pv_sj, pv_ucb], os, 'HAHFDC')).groupby('sensed_mode').sum().astype(int)\n",
-    "        print(df.reindex(columns=['WALKING', 'BICYCLING', 'ESCOOTER', 'BUS', 'LIGHT_RAIL', 'TRAIN', 'NO_GT'],\n",
+    "        print(df.reindex(columns=['WALKING', 'BICYCLING', 'ESCOOTER','CAR', 'BUS', 'LIGHT_RAIL', 'TRAIN', 'NO_GT'],\n",
     "                   index=['WALKING', 'CYCLING', 'AUTOMOTIVE']).style.to_latex())\n",
     "        df = pd.DataFrame(get_confusion_matrix([pv_la, pv_sj, pv_ucb], os, 'HAMFDC')).groupby('sensed_mode').sum().astype(int)\n",
-    "        print(df.reindex(columns=['WALKING', 'BICYCLING', 'ESCOOTER', 'BUS', 'LIGHT_RAIL', 'TRAIN', 'NO_GT'],\n",
+    "        print(df.reindex(columns=['WALKING', 'BICYCLING', 'ESCOOTER','CAR', 'BUS', 'LIGHT_RAIL', 'TRAIN', 'NO_GT'],\n",
     "                   index=['WALKING', 'CYCLING', 'AUTOMOTIVE']).style.to_latex())\n",
     "        df = pd.DataFrame(get_confusion_matrix([pv_la, pv_sj, pv_ucb], os, 'MAHFDC')).groupby('sensed_mode').sum().astype(int)\n",
-    "        print(df.reindex(columns=['WALKING', 'BICYCLING', 'ESCOOTER', 'BUS', 'LIGHT_RAIL', 'TRAIN', 'NO_GT'],\n",
+    "        print(df.reindex(columns=['WALKING', 'BICYCLING', 'ESCOOTER','CAR', 'BUS', 'LIGHT_RAIL', 'TRAIN', 'NO_GT'],\n",
     "                   index=['WALKING', 'CYCLING', 'AUTOMOTIVE']).style.to_latex())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34dfe8b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_rf_cm(os):\n",
+    "    if os == 'ios':\n",
+    "        df = pd.DataFrame(get_confusion_matrix([rfv_la, rfv_sj, rfv_ucb], 'ios', 'HAHFDC')).groupby('sensed_mode').sum().astype(int)\n",
+    "        print(df.reindex(columns=['WALKING', 'BICYCLING', 'ESCOOTER', 'CAR', 'BUS', 'LIGHT_RAIL', 'TRAIN', 'NO_GT'],\n",
+    "                   index=['WALKING', 'BICYCLING', 'TRAIN', 'CAR', 'AIR_OR_HSR']).style.to_latex())\n",
+    "        df = pd.DataFrame(get_confusion_matrix([rfv_la, rfv_sj, rfv_ucb], 'ios', 'MAHFDC')).groupby('sensed_mode').sum().astype(int)\n",
+    "        print(df.reindex(columns=['WALKING', 'BICYCLING', 'ESCOOTER', 'CAR', 'BUS', 'LIGHT_RAIL', 'TRAIN', 'NO_GT'],\n",
+    "                   index=['WALKING', 'BICYCLING', 'CAR']).style.to_latex())\n",
+    "        df = pd.DataFrame(get_confusion_matrix([rfv_la, rfv_sj, rfv_ucb], 'ios', 'HAMFDC')).groupby('sensed_mode').sum().astype(int)\n",
+    "        print(df.reindex(columns=['WALKING', 'BICYCLING', 'ESCOOTER', 'CAR', 'BUS', 'LIGHT_RAIL', 'TRAIN', 'NO_GT'],\n",
+    "                   index=['WALKING', 'BICYCLING', 'CAR', 'AIR_OR_HSR']).style.to_latex())\n",
+    "    if os == 'android':\n",
+    "        df = pd.DataFrame(get_confusion_matrix([rfv_la, rfv_sj, rfv_ucb], 'android', 'HAHFDC')).groupby('sensed_mode').sum().astype(int)\n",
+    "        print(df.reindex(columns=['WALKING', 'BICYCLING', 'ESCOOTER', 'CAR', 'BUS', 'LIGHT_RAIL', 'TRAIN', 'NO_GT'],\n",
+    "                   index=['WALKING', 'BICYCLING', 'CAR', 'AIR_OR_HSR']).style.to_latex())\n",
+    "        df = pd.DataFrame(get_confusion_matrix([rfv_la, rfv_sj, rfv_ucb], 'android', 'MAHFDC')).groupby('sensed_mode').sum().astype(int)\n",
+    "        print(df.reindex(columns=['WALKING', 'BICYCLING', 'ESCOOTER', 'CAR', 'BUS', 'LIGHT_RAIL', 'TRAIN', 'NO_GT'],\n",
+    "                   index=['WALKING', 'BICYCLING', 'TRAIN', 'CAR', 'AIR_OR_HSR']).style.to_latex())\n",
+    "        df = pd.DataFrame(get_confusion_matrix([rfv_la, rfv_sj, rfv_ucb], 'android', 'HAMFDC')).groupby('sensed_mode').sum().astype(int)\n",
+    "        print(df.reindex(columns=['WALKING', 'BICYCLING', 'ESCOOTER', 'CAR', 'BUS', 'LIGHT_RAIL', 'TRAIN', 'NO_GT'],\n",
+    "                   index=['WALKING', 'BICYCLING', 'TRAIN', 'CAR']).style.to_latex())"
    ]
   },
   {
@@ -560,16 +636,197 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eccd4179",
+   "metadata": {},
+   "source": [
+    "#### cleaned view"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "87a082a4",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "%%capture\n",
     "cv_la   = eapv.create_analysed_view(pv_la, \"http://localhost:8080\", \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/cleaned_section\")\n",
     "cv_sj   = eapv.create_analysed_view(pv_sj, \"http://localhost:8080\", \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/cleaned_section\")\n",
     "cv_ucb  = eapv.create_analysed_view(pv_ucb, \"http://localhost:8080\", \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/cleaned_section\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3bc72d77",
+   "metadata": {},
+   "source": [
+    "#### inferred view random forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ea612f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rfv_la   = eapv.create_analysed_view(pv_la, \"http://localhost:8080\", \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")\n",
+    "rfv_sj   = eapv.create_analysed_view(pv_sj, \"http://localhost:8080\", \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")\n",
+    "rfv_ucb  = eapv.create_analysed_view(pv_ucb, \"http://localhost:8080\", \"analysis/recreated_location\", \"analysis/cleaned_trip\", \"analysis/inferred_section\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ccea244",
+   "metadata": {},
+   "source": [
+    "# Results "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "728bb6ab",
+   "metadata": {},
+   "source": [
+    "#### Raw data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70d5ffdc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_binary_raw_data('ios')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c55cf591",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_binary_raw_data('android')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d16f2d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_f_score('ios')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3fa912b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_f_score('android')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "463edab6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_raw_cm('ios')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5885735e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_raw_cm('android')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92124deb",
+   "metadata": {},
+   "source": [
+    "#### Cleaned data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab27c65e",
+   "metadata": {},
+   "source": [
+    "#### Random Forrest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44db2810",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_rf_binary('ios')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6a284f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_rf_binary('android')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce81be62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_f_score('ios')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "904c8658",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_f_score('android')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb80c958",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_rf_cm('ios')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1ba68d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_rf_cm('android')"
    ]
   }
  ],
