formatted base mode map, notbook almost complete :)

--- a/classification_analysis.ipynb
+++ b/classification_analysis.ipynb
@@ -262,22 +262,89 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ddf4365a",
+   "metadata": {},
+   "source": [
+    "#### rab base mode map"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b683621c",
+   "id": "48d898ab",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# taken from emission.core.wrapper.modeprediction\n",
-    "import enum as enum\n",
-    "class PredictedModeTypes(enum.Enum):\n",
-    "    UNKNOWN = 0\n",
-    "    WALKING = 1\n",
-    "    BICYCLING = 2\n",
-    "    BUS = 3\n",
-    "    TRAIN = 4\n",
-    "    CAR = 5\n",
-    "    AIR_OR_HSR = 6"
+    "RBMM = {\"WALKING\": \"WALKING\",\n",
+    "             \"RUNNING\" : \"WALKING\", \n",
+    "             \"CYCLING\" : \"CYCLING\",\n",
+    "             \"BICYCLING\": \"CYCLING\",\n",
+    "             \"ESCOOTER\": \"CYCLING\", \n",
+    "             \"AUTOMOTIVE\" : \"AUTOMOTIVE\",\n",
+    "             \"BUS\": \"AUTOMOTIVE\",\n",
+    "             \"TRAIN\": \"AUTOMOTIVE\",\n",
+    "             \"LIGHT_RAIL\": \"AUTOMOTIVE\",\n",
+    "             \"SUBWAY\": \"AUTOMOTIVE\",\n",
+    "             \"CAR\": \"AUTOMOTIVE\",\n",
+    "             \"AIR_OR_HSR\": \"AUTOMOTIVE\",\n",
+    "             \"INVALID\" : \"INVALID\"}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "589fc525",
+   "metadata": {},
+   "source": [
+    "#### cleaned base mode map\n",
+    "\n",
+    "e-mission-server.emission.core.wrapper.motionactivity.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8dc453b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CBMM = {0 : 'AUTOMOTIVE', \n",
+    "        1 : 'CYCLING', \n",
+    "        2 : 'WALKING', \n",
+    "        3 : 'WALKING', \n",
+    "        4 : 'INVALID', \n",
+    "        5 : 'WALKING', \n",
+    "        7 : 'WALKING', \n",
+    "        8 : 'WALKING', \n",
+    "        9 : 'INVALID', \n",
+    "        10 : 'AUTOMOTIVE', \n",
+    "        11 : 'AUTOMOTIVE'}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4f3dfff",
+   "metadata": {},
+   "source": [
+    "#### inferred base mode map\n",
+    "\n",
+    "e-mission-server.emission.core.wrapper.modeprediction.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59c93a44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IBMM = {0 : 'INVALID', \n",
+    "        1 : 'WALKING', \n",
+    "        2 : 'CYCLING', \n",
+    "        3 : 'AUTOMOTIVE', \n",
+    "        4 : 'TRAIN', \n",
+    "        5 : 'AUTOMOTIVE', \n",
+    "        6 : 'AUTOMOTIVE'}"
    ]
   },
   {
@@ -300,7 +367,6 @@
     "                if 'data' in ss.keys():\n",
     "                    # taken from emission.core.wrapper.modeprediction\n",
     "                    ss = ss['data']\n",
-    "                    ss['mode'] = PredictedModeTypes(ss['sensed_mode'])._name_\n",
     "                ss_dur = ss['end_ts'] - ss['start_ts']\n",
     "                gts_dur = 0\n",
     "                for gts in trip['gts_timeline']:\n",
@@ -350,19 +416,7 @@
    "outputs": [],
    "source": [
     "def get_binary_raw_data(os):\n",
-    "    BASE_MODE = {\"WALKING\": \"WALKING\",\n",
-    "                 \"RUNNING\" : \"WALKING\", \n",
-    "                 \"CYCLING\" : \"CYCLING\",\n",
-    "                 \"BICYCLING\": \"CYCLING\",\n",
-    "                 \"ESCOOTER\": \"CYCLING\", \n",
-    "                 \"AUTOMOTIVE\" : \"AUTOMOTIVE\",\n",
-    "                 \"BUS\": \"AUTOMOTIVE\",\n",
-    "                 \"TRAIN\": \"AUTOMOTIVE\",\n",
-    "                 \"LIGHT_RAIL\": \"AUTOMOTIVE\",\n",
-    "                 \"SUBWAY\": \"AUTOMOTIVE\",\n",
-    "                 \"CAR\": \"AUTOMOTIVE\",\n",
-    "                 \"AIR_OR_HSR\": \"AUTOMOTIVE\",\n",
-    "                 \"INVALID\" : \"INVALID\"}\n",
+    "    BASE_MODE = RBMM\n",
     "    df = pd.DataFrame(get_binary_class_in_sec(os, 'HAHFDC', [pv_la, pv_ucb, pv_sj], BASE_MODE)).fillna(0)\n",
     "    df=df.reindex(columns=['WALKING', 'CYCLING', 'AUTOMOTIVE', 'INVALID'])\n",
     "    dic={}\n",
@@ -406,19 +460,7 @@
    "outputs": [],
    "source": [
     "def get_rf_binary(os):\n",
-    "    BASE_MODE = {\"WALKING\": \"WALKING\",\n",
-    "                 \"RUNNING\" : \"WALKING\", \n",
-    "                 \"CYCLING\" : \"CYCLING\",\n",
-    "                 \"BICYCLING\": \"CYCLING\",\n",
-    "                 \"ESCOOTER\": \"CYCLING\", \n",
-    "                 \"AUTOMOTIVE\" : \"AUTOMOTIVE\",\n",
-    "                 \"BUS\": \"AUTOMOTIVE\",\n",
-    "                 \"TRAIN\": \"TRAIN\",\n",
-    "                 \"LIGHT_RAIL\": \"TRAIN\",\n",
-    "                 \"SUBWAY\": \"TRAIN\",\n",
-    "                 \"CAR\": \"AUTOMOTIVE\",\n",
-    "                 \"AIR_OR_HSR\": \"TRAIN\",\n",
-    "                 \"INVALID\" : \"INVALID\"}\n",
+    "    BASE_MODE = IBMM\n",
     "    for role in ['HAHFDC', 'HAMFDC', 'MAHFDC']:\n",
     "        df = pd.DataFrame(get_binary_class_in_sec(os, role, [rfv_la, rfv_ucb, rfv_sj], BASE_MODE)).fillna(0)\n",
     "        df=df.reindex(columns=['WALKING', 'CYCLING', 'AUTOMOTIVE', 'TRAIN', 'INVALID'])\n",
@@ -640,6 +682,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f3e5f2ef",
+   "metadata": {},
+   "source": [
+    "#### inferred view GIS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d09234d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "1ccea244",
    "metadata": {},
    "source": [
@@ -681,19 +739,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display_f_score('ios', [pv_la, pv_sj, pv_ucb], {\"WALKING\": \"WALKING\",\n",
-    "                 \"RUNNING\" : \"WALKING\", \n",
-    "                 \"CYCLING\" : \"CYCLING\",\n",
-    "                 \"BICYCLING\": \"CYCLING\",\n",
-    "                 \"ESCOOTER\": \"CYCLING\", \n",
-    "                 \"AUTOMOTIVE\" : \"AUTOMOTIVE\",\n",
-    "                 \"BUS\": \"AUTOMOTIVE\",\n",
-    "                 \"TRAIN\": \"AUTOMOTIVE\",\n",
-    "                 \"LIGHT_RAIL\": \"AUTOMOTIVE\",\n",
-    "                 \"SUBWAY\": \"AUTOMOTIVE\",\n",
-    "                 \"CAR\": \"AUTOMOTIVE\",\n",
-    "                 \"AIR_OR_HSR\": \"AUTOMOTIVE\",\n",
-    "                 \"INVALID\" : \"INVALID\"})"
+    "display_f_score('ios', [pv_la, pv_sj, pv_ucb], RBMM)"
    ]
   },
   {
@@ -703,19 +749,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display_f_score('android', [pv_la, pv_sj, pv_ucb], {\"WALKING\": \"WALKING\",\n",
-    "                 \"RUNNING\" : \"WALKING\", \n",
-    "                 \"CYCLING\" : \"CYCLING\",\n",
-    "                 \"BICYCLING\": \"CYCLING\",\n",
-    "                 \"ESCOOTER\": \"CYCLING\", \n",
-    "                 \"AUTOMOTIVE\" : \"AUTOMOTIVE\",\n",
-    "                 \"BUS\": \"AUTOMOTIVE\",\n",
-    "                 \"TRAIN\": \"AUTOMOTIVE\",\n",
-    "                 \"LIGHT_RAIL\": \"AUTOMOTIVE\",\n",
-    "                 \"SUBWAY\": \"AUTOMOTIVE\",\n",
-    "                 \"CAR\": \"AUTOMOTIVE\",\n",
-    "                 \"AIR_OR_HSR\": \"AUTOMOTIVE\",\n",
-    "                 \"INVALID\" : \"INVALID\"})"
+    "display_f_score('android', [pv_la, pv_sj, pv_ucb], RBMM)"
    ]
   },
   {
@@ -781,19 +815,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display_f_score('ios', [rfv_la, rfv_sj, rfv_ucb], {\"WALKING\": \"WALKING\",\n",
-    "                 \"RUNNING\" : \"WALKING\", \n",
-    "                 \"CYCLING\" : \"CYCLING\",\n",
-    "                 \"BICYCLING\": \"CYCLING\",\n",
-    "                 \"ESCOOTER\": \"CYCLING\", \n",
-    "                 \"AUTOMOTIVE\" : \"AUTOMOTIVE\",\n",
-    "                 \"BUS\": \"AUTOMOTIVE\",\n",
-    "                 \"TRAIN\": \"TRAIN\",\n",
-    "                 \"LIGHT_RAIL\": \"TRAIN\",\n",
-    "                 \"SUBWAY\": \"TRAIN\",\n",
-    "                 \"CAR\": \"AUTOMOTIVE\",\n",
-    "                 \"AIR_OR_HSR\": \"TRAIN\",\n",
-    "                 \"INVALID\" : \"INVALID\"})"
+    "display_f_score('ios', [rfv_la, rfv_sj, rfv_ucb], IBMM)"
    ]
   },
   {
@@ -803,19 +825,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display_f_score('android', [rfv_la, rfv_sj, rfv_ucb], {\"WALKING\": \"WALKING\",\n",
-    "                 \"RUNNING\" : \"WALKING\", \n",
-    "                 \"CYCLING\" : \"CYCLING\",\n",
-    "                 \"BICYCLING\": \"CYCLING\",\n",
-    "                 \"ESCOOTER\": \"CYCLING\", \n",
-    "                 \"AUTOMOTIVE\" : \"AUTOMOTIVE\",\n",
-    "                 \"BUS\": \"AUTOMOTIVE\",\n",
-    "                 \"TRAIN\": \"TRAIN\",\n",
-    "                 \"LIGHT_RAIL\": \"TRAIN\",\n",
-    "                 \"SUBWAY\": \"TRAIN\",\n",
-    "                 \"CAR\": \"AUTOMOTIVE\",\n",
-    "                 \"AIR_OR_HSR\": \"TRAIN\",\n",
-    "                 \"INVALID\" : \"INVALID\"})"
+    "display_f_score('android', [rfv_la, rfv_sj, rfv_ucb], IBMM)"
    ]
   },
   {
@@ -839,9 +849,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b03a27cd",
+   "metadata": {},
+   "source": [
+    "#### GIS"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e276fcab",
+   "id": "c7053d6d",
    "metadata": {},
    "outputs": [],
    "source": []
